# SLCM_APP

./: README.md  docker-compose-dev.yaml  docker-compose.yaml  pubspec.yaml
.github/workflows/: build-release.yaml  main.yaml
android/: build.gradle
android/app/: build.gradle  google-services.json
backend/: .gitignore  Dockerfile  main.py  noxfile.py  pyproject.toml  requirements.txt  schemas.py
backend/routers/: betterslcm.py
backend/src/: SlcmSwitch.py  betterslcm.py  main.py  models.py  routes.py  schemas.py
frontend/: Caddyfile  Dockerfile  README.md  firebase.json  pubspec.yaml
frontend/ios/Runner/: Info.plist
frontend/lib/: app_colors.dart  cgpa.dart  change_password.dart  firebase_options.dart  grades.dart  home_page.dart  information.dart  main.dart  marks.dart  session_manager.dart  timetable.dart
frontend/lib/pages/: Attendance.dart  cgpa.dart  grades.dart  home_page.dart  information.dart  login.dart  marks.dart  (+3 more)
frontend/web/: index.html  manifest.json
frontend/windows/: CMakeLists.txt
ios/Runner.xcodeproj/: project.pbxproj
lib/: Attendance.dart  cgpa.dart  grades.dart  home_page.dart  information.dart  login.dart  main.dart  marks.dart  redirects.dart  session_manager.dart  settings.dart  timetable.dart
lib/pages/: Attendance.dart  about.dart  cgpa.dart  grades.dart  home_page.dart  information.dart  login.dart  marks.dart  redirects.dart  settings.dart  timetable.dart
lib/utils/: checkupdates.dart  login.dart  util.dart
linux/: CMakeLists.txt  my_application.cc
test/: widget_test.dart
windows/runner/: Runner.rc
(+11 files in other folders)
