[project]
name = "betterslcm-backend"
version = "0.1.0"
description = "FastAPI application for SLCM Switch"
readme = "README.md"
authors = [
    { name = "Karan Parashar", email = "whyredfire@gmail.com" },
]
requires-python = ">=3.13"
dependencies = [
    "bs4>=0.0.2",
    "fastapi[standard]>=0.116.1",
    "requests>=2.32.4",
]

[dependency-groups]
dev = [
    "nox>=2025.10.16",
    "pyrefly>=0.38.0",
    "ruff>=0.14.1",
]

[tool.pyright]
# Pyright is only used for editors

# Pyright ReportCallIssue is incorrectly flagged on
# pydantic models and settings on defaults
reportCallIssue = false
